# portfolio-backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  RAILWAY_ENV.md  README.md  SECURITY.md  docker-compose.gcp-ops.yml  docker-compose.logging.yml  docker-compose.railway.yml  docker-compose.yml
.agents/skills/senior-backend/: SKILL.md
.cargo/: audit.toml
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.cursor/rules/: rust-completion-verification.mdc
.github/: dependabot.yml
.github/workflows/: cd-production.yml  ci.yml  deploy-gcp.yml
config/: loki-config.yml  prometheus.prod.yml  prometheus.yml  promtail-config.yml  slo-rules.yml
config/grafana/alerts/: rules.yml
config/grafana/dashboards/: application-overview.json  dashboard-config.yml  errors.json  performance.json  security.json
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: loki.yml  postgres.yml  prometheus.yml
docs/performance/: API_SLA.md  BASELINE_API_LATENCY.md
local-crates/crossbeam-epoch/: Cargo.toml
local-crates/crossbeam-epoch/src/: atomic.rs
scripts/: compose-dev.sh  latency-smoke.sh
src/: email.rs  lib.rs  main.rs  metrics.rs  openapi.rs  test_support.rs
src/db/: mod.rs  models.rs
src/logging/: config.rs  middleware.rs  mod.rs
src/redis/: mod.rs  pool.rs  presence_store.rs  rate_limit.rs
src/routes/: ai.rs  auth.rs  blog.rs  cms.rs  contact.rs  gate.rs  github.rs  health.rs  logs.rs  mod.rs  newsletter.rs  playground.rs  portfolio.rs  presence.rs  roadmap.rs  rss.rs  series.rs  spotify.rs  translation.rs  twofa.rs  upload.rs
terraform/docs/: deploy-runbook.md  gcp-bootstrap.md
terraform/environments/prod/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/artifact_registry/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_run/: main.tf  outputs.tf  variables.tf
terraform/modules/compute_ops/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
