[package]
name = "portfolio-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
  "trace",
  "request-id",
  "util",
  "cors",
  "compression-full",
  "limit",
  "fs",
] }
once_cell = "1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "fmt",
] }
tracing-appender = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

# Environment
dotenvy = "0.15"

# Auth
bcrypt = "0.18"
jsonwebtoken = "10"
rand = "0.10"
sha2 = "0.10"

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
] }

# HTML sanitization (blog)
ammonia = "4"
regex = "1"
